--- a/Contact.html
+++ b/Contact.html
@@ -55,7 +55,7 @@
                         <a class="nav-link" href="./Contact.html">Contact Us</a>
                     </li>
                     <li><a href="tel:+917972911543" class="fw-bold m-1 btn btn-primary text-light callnowbtn">Call Now</a></li>
-                    <li><a href="tel:+917972911543" class="fw-bold m-1 btn btn-primary text-light getaquotebtn">Get A Quote</a></li>
+                    <li><a href="./Contact.html" class="fw-bold m-1 btn btn-primary text-light getaquotebtn">Get A Quote</a></li>
                 </ul>
             </div>
         </div>
@@ -69,7 +69,7 @@
             allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
 
-    <div class="row container-fluid  d-flex justify-content-evenly ">
+    <div id="contdiv" class="row container-fluid  d-flex justify-content-evenly ">
         <!-- <div class="col-lg-1"></div> -->
         <div class="col-lg-5 col-md-6 ">
             <form class="form">
