--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
                         <a class="nav-link" href="./Contact.html">Contact Us</a>
                     </li>
                     <li><a href="tel:+917972911543" class="fw-bold m-1 btn btn-primary text-light callnowbtn">Call Now</a></li>
-                    <li><a href="tel:+917972911543" class="fw-bold m-1 btn btn-primary text-light getaquotebtn">Get A Quote</a></li>
+                    <li><a href="./Contact.html" class="fw-bold m-1 btn btn-primary text-light getaquotebtn">Get A Quote</a></li>
                 </ul>
             </div>
         </div>
