--- a/Electrical.html
+++ b/Electrical.html
@@ -15,7 +15,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="./style.css">
-    <title>Document</title>
+    <title>Electrical | Ennova technology</title>
 </head>
 
 <body>
@@ -252,7 +252,7 @@
             <div class="container  ">
                 <h2 class=" fw-bold mt-3 ">Design & Manufacturing of Control Panels</h2>
                 <p class="">Experience next-level efficiency with our personalized panel design and manufacturing
-                    solutions. From PCC and MCC to VFD and PLC panels, We craft tailored options to match your exact
+                    solutions. From PCC and MCC to VFD and PLC panels, we craft tailored options to match your exact
                     needs. Our state-of-the-art designs prioritize performance, dependability and energy optimization,
                     seamlessly integrating into your operations. Trust our expertise to elevate your systems and propel
                     your success forward.</p>
@@ -279,7 +279,7 @@
                                     <li>Efficient and secure power distribution.
                                     </li>
                                     <li>Various protections viz short circuit, overload, earth fault, under voltage
-                                        etc. are provided to
+                                        etc. Are provided to
                                         protect source and equipment.
                                     </li>
                                 </ul>
@@ -297,7 +297,7 @@
                                     <li>Our MCC panels facilitate
                                         seamless operation of motors,
                                         featuring intelligent control and
-                                        protection functionalities</li>
+                                        protection functionalities.</li>
                                     <li>Used for connecting the individual
                                         motors for manually, remotely or
                                         automatically starting, stopping
