--- a/thirdcv.html
+++ b/thirdcv.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ThirdAC</title>
+    <title>Relay230 | Ennova technology</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
 
@@ -248,7 +248,7 @@
         </div>
         <div class="col-lg-5 partinfoimg">
             <h4 class="fw-bold ">Schematic:</h4>
-            <img class="img-fluid " src="./Relaythird/DROWDIAGRAM230.png" alt="">
+            <img class="img-fluid symanticimg" src="./Relaythird/DROWDIAGRAM230.png" alt="">
         </div>
     </section>
 
