--- a/Contact.html
+++ b/Contact.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact | Ennova technology</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="icon" type="image/x-icon" href="./Hero/logo-removebg-preview.png">
+    <link rel="icon" type="image/x-icon" href="./Hero/logo-removebg-preview.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -54,8 +54,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="./Contact.html">Contact Us</a>
                     </li>
-                    <li><a href="tel:+917972911543" class="fw-bold m-1 btn btn-primary text-light callnowbtn">Call Now</a></li>
-                    <li><a href="./Contact.html" class="fw-bold m-1 btn btn-primary text-light getaquotebtn">Get A Quote</a></li>
+                    <li><a href="tel:+917972911543" class="fw-bold m-1 btn btn-primary text-light callnowbtn">Call
+                            Now</a></li>
+                    <li><a href="./Contact.html" class="fw-bold m-1 btn btn-primary text-light getaquotebtn">Get A
+                            Quote</a></li>
                 </ul>
             </div>
         </div>
@@ -74,7 +76,7 @@
         <div class="col-lg-5 col-md-6 ">
             <form class="form">
                 <h2>User Profile</h2>
-                <div class="form-group">
+                <div class="form-group mt-3">
                     <label for="email">Full Name:</label>
                     <div class="relative">
                         <input class="form-control" id="name" type="text" pattern="[a-zA-Z\s]+" required="" autofocus=""
@@ -83,7 +85,7 @@
                         <i class="fa fa-user"></i>
                     </div>
                 </div>
-                <div class="form-group">
+                <div class="form-group mt-3">
                     <label for="email">Email address:</label>
                     <div class="relative">
                         <input class="form-control" type="email" required="" placeholder="Type your email address..."
@@ -91,7 +93,7 @@
                         <i class="fa fa-envelope"></i>
                     </div>
                 </div>
-                <div class="form-group">
+                <div class="form-group mt-3">
                     <label for="email">Contact Number:</label>
                     <div class="relative">
                         <input class="form-control" type="text" maxlength="10"
@@ -101,7 +103,7 @@
                     </div>
                 </div>
 
-                <div class="form-group">
+                <div class="form-group mt-3">
                     <label for="email">Specialization:</label>
                     <div class="relative">
                         <input class="form-control" type="text" id="tags" required=""
@@ -111,14 +113,14 @@
                 </div>
 
 
-                <div class="tright">
+                <div class="tright mt-4">
                     <a href=""><button class="movebtn movebtnsu" type="Reset"><i class="fa fa-fw fa-refresh"></i> Reset
                         </button></a>
                     <a href=""><button class="movebtn movebtnsu" type="Submit">Submit <i
                                 class="fa fa-fw fa-paper-plane"></i></button></a>
                 </div>
             </form>
- 
+
         </div>
 
         <div class="col-lg-5 col-md-6 ">
@@ -156,8 +158,8 @@
                         <i class="fa-solid fa-location-dot"></i>
                     </div>
                     <div>
-                        <h6 class="fw-bold ">Address :</h6>
-                        <p>#Plot No.F45, Kupwad M.I.D.C road, Near TCI Freight.
+                        <h6 class="fw-bold ">Address</h6>
+                        <p>#Plot No.F45, Kupwad M.I.D.C road, Near TCI Freight,
                             Kupwad, Dist-Sangli, Maharashtra- 416436.</p>
                     </div>
                 </div>
@@ -175,7 +177,8 @@
             <div class="col-md-12 col-lg-4">
                 <a href="./index.html"><img src="./Hero/ENNOVAlogo.png" class="contactimgeno" alt=""></a>
                 <p>At Ennova Technology, we specialize in creating innovative solutions for businesses. From designing
-                    electronics to developing websites, software and application. We offer a wide range of services to help
+                    electronics to developing websites, software and application. We offer a wide range of services to
+                    help
                     businesses succeed. We also provide cutting-edge IoT solutions for industrial automation, making
                     processes more efficient and effective. Our goal is to use technology to solve problems and drive
                     growth for our clients.</p>
