--- a/firstcv.html
+++ b/firstcv.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FristDC</title>
+    <title>Relay24 | Ennova technology</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
 
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="icon" type="image/x-icon" href="./Hero/logo-removebg-preview.png">
+    <link rel="icon" type="image/x-icon" href="./Hero/logo-removebg-preview.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -56,8 +56,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="./Contact.html">Contact Us</a>
                     </li>
-                    <li><a href="tel:+917972911543" class="fw-bold m-1 btn btn-primary text-light callnowbtn">Call Now</a></li>
-                    <li><a href="./Contact.html" class="fw-bold m-1 btn btn-primary text-light getaquotebtn">Get A Quote</a></li>
+                    <li><a href="tel:+917972911543" class="fw-bold m-1 btn btn-primary text-light callnowbtn">Call
+                            Now</a></li>
+                    <li><a href="./Contact.html" class="fw-bold m-1 btn btn-primary text-light getaquotebtn">Get A
+                            Quote</a></li>
                 </ul>
             </div>
         </div>
@@ -127,8 +129,77 @@
                     control and automation in various applications. Engineered with precision
                     and versatility, this relay card provides seamless integration, optimal
                     performance and reliability for your electrical System.</p>
-                <button type="button" class="btn btn-secondary">Get A Quote</button>
+               
 
+
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-secondary " data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    Get A Quote
+                </button>
+
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                           
+                            <div class="modal-body">
+                                <form class="form">
+                                    <h2>User Profile</h2>
+                                    <div class="form-group mt-3">
+                                        <label for="email">Full Name:</label>
+                                        <div class="relative">
+                                            <input class="form-control" id="name" type="text" pattern="[a-zA-Z\s]+"
+                                                required="" autofocus=""
+                                                title="Username should only contain letters. e.g. Piyush Gupta"
+                                                autocomplete="" placeholder="Type your name here...">
+                                            <i class="fa fa-user"></i>
+                                        </div>
+                                    </div>
+                                    <div class="form-group mt-3">
+                                        <label for="email">Email address:</label>
+                                        <div class="relative">
+                                            <input class="form-control" type="email" required=""
+                                                placeholder="Type your email address..."
+                                                pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$">
+                                            <i class="fa fa-envelope"></i>
+                                        </div>
+                                    </div>
+                                    <div class="form-group mt-3">
+                                        <label for="email">Contact Number:</label>
+                                        <div class="relative">
+                                            <input class="form-control" type="text" maxlength="10"
+                                                oninput="this.value=this.value.replace(/[^0-9]/g,'');" required=""
+                                                placeholder="Type your Mobile Number...">
+                                            <i class="fa fa-phone"></i>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group mt-3">
+                                        <label for="email">Message:</label>
+                                        <div class="relative">
+                                            <input class="form-control" type="text" id="tags" required=""
+                                                placeholder="Type your Message...">
+                                            <i class="fa fa-css3"></i>
+                                        </div>
+                                    </div>
+
+
+                                    <div class="tright mt-4">
+                                        <button type="button" data-bs-dismiss="modal" class="movebtn movebtnsu"
+                                        aria-label="Close"><i class="fa-solid fa-arrow-left"></i> Back</button>
+                                        <a href=""><button class="movebtn movebtnsu" type="Reset"><i
+                                                    class="fa fa-fw fa-refresh"></i> Reset
+                                            </button></a>
+                                        <a href=""><button class="movebtn movebtnsu" type="Submit">Submit <i
+                                                    class="fa fa-fw fa-paper-plane"></i></button></a>
+                                    </div>
+                                </form>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="col-lg-1"></div>
         </div>
@@ -281,11 +352,11 @@
     <section id="pcblayoutimg" class="row container-fluid mb-5 ">
         <div class="col-lg-7 partinfoimg">
             <h4 class="fw-bold ">PCB Layout:</h4>
-            <img class="img-fluid symanticimg" src="./Relaythird/diagramrelay.jpeg" alt="">
+            <img class="img-fluid symanticimg" src="./Relaythird/24V DC.png" alt="">
         </div>
         <div class="col-lg-5 partinfoimg">
             <h4 class="fw-bold ">Schematic:</h4>
-            <img class="img-fluid " src="./Relaythird/DROWDIAGRAM.jpeg" alt="">
+            <img class="img-fluid symanticimg" src="./Relaythird/DROWDIAGRAM.jpeg" alt="">
         </div>
     </section>
 
