--- a/firstcv.html
+++ b/firstcv.html
@@ -129,7 +129,7 @@
                     control and automation in various applications. Engineered with precision
                     and versatility, this relay card provides seamless integration, optimal
                     performance and reliability for your electrical System.</p>
-               
+
 
 
                 <!-- Button trigger modal -->
@@ -142,7 +142,7 @@
                     aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
-                           
+
                             <div class="modal-body">
                                 <form class="form">
                                     <h2>User Profile</h2>
@@ -187,7 +187,7 @@
 
                                     <div class="tright mt-4">
                                         <button type="button" data-bs-dismiss="modal" class="movebtn movebtnsu"
-                                        aria-label="Close"><i class="fa-solid fa-arrow-left"></i> Back</button>
+                                            aria-label="Close"><i class="fa-solid fa-arrow-left"></i> Back</button>
                                         <a href=""><button class="movebtn movebtnsu" type="Reset"><i
                                                     class="fa fa-fw fa-refresh"></i> Reset
                                             </button></a>
@@ -416,18 +416,19 @@
                     <p><i class="far fa-envelope"></i> purchase.ennovatech@gmail.com</p>
                     <p><i class="far fa-envelope"></i> development.ennovatech@gmail.com</p>
                 </div>
-                <p><i class="fa-solid fa-location-dot"></i> #Plot No.F45, Kupwad M.I.D.C road, Near TCI Freight.
+                <p><i class="fa-solid fa-location-dot"></i> #Plot No.F45, Kupwad M.I.D.C road, Near TCI Freight,
                     Kupwad, Dist-Sangli, Maharashtra- 416436.</p>
                 <div id="iconssym">
-                    <a href="https://www.facebook.com/profile.php?id=100063876886966"> <i
+                    <a href="https://www.facebook.com/profile.php?id=100063876886966" target="_blank"> <i
                             class="fab fa-facebook-square"></i></a>
-                    <a href="https://twitter.com/EnnovaTech24"> <i class="fab fa-twitter-square"></i></a>
-                    <a href="https://youtube.com/@ennovatechnology1286?si=DltyPRZSHjJ3qHM1"> <i
+                    <a href="https://twitter.com/EnnovaTech24" target="_blank"> <i class="fab fa-twitter-square"
+                            target="_blank"></i></a>
+                    <a href="https://youtube.com/@ennovatechnology1286?si=DltyPRZSHjJ3qHM1" target="_blank"> <i
                             class="fab fa-youtube-square"></i></a>
-                    <a href="https://www.linkedin.com/company/ennova-technology/"> <i class="fab fa-linkedin"></i></a>
-                    <a href="https://www.instagram.com/ennova_technology?igsh=MTVieXY2Y29jcDgwaA=="> <i
+                    <a href="https://www.linkedin.com/company/ennova-technology/" target="_blank"> <i
+                            class="fab fa-linkedin"></i></a>
+                    <a href="https://www.instagram.com/ennova_technology?igsh=MTVieXY2Y29jcDgwaA==" target="_blank"> <i
                             class="fab fa-instagram-square"></i></a>
-
                 </div>
             </div>
         </div>
