--- a/secondcv.html
+++ b/secondcv.html
@@ -405,19 +405,20 @@
                     <p><i class="far fa-envelope"></i> purchase.ennovatech@gmail.com</p>
                     <p><i class="far fa-envelope"></i> development.ennovatech@gmail.com</p>
                 </div>
-                <p><i class="fa-solid fa-location-dot"></i> #Plot No.F45, Kupwad M.I.D.C road, Near TCI Freight.
+                <p><i class="fa-solid fa-location-dot"></i> #Plot No.F45, Kupwad M.I.D.C road, Near TCI Freight,
                     Kupwad, Dist-Sangli, Maharashtra- 416436.</p>
-                <div id="iconssym">
-                    <a href="https://www.facebook.com/profile.php?id=100063876886966"> <i
-                            class="fab fa-facebook-square"></i></a>
-                    <a href="https://twitter.com/EnnovaTech24"> <i class="fab fa-twitter-square"></i></a>
-                    <a href="https://youtube.com/@ennovatechnology1286?si=DltyPRZSHjJ3qHM1"> <i
-                            class="fab fa-youtube-square"></i></a>
-                    <a href="https://www.linkedin.com/company/ennova-technology/"> <i class="fab fa-linkedin"></i></a>
-                    <a href="https://www.instagram.com/ennova_technology?igsh=MTVieXY2Y29jcDgwaA=="> <i
-                            class="fab fa-instagram-square"></i></a>
-
-                </div>
+                    <div id="iconssym">
+                        <a href="https://www.facebook.com/profile.php?id=100063876886966" target="_blank"> <i
+                                class="fab fa-facebook-square"></i></a>
+                        <a href="https://twitter.com/EnnovaTech24" target="_blank"> <i class="fab fa-twitter-square"
+                                target="_blank"></i></a>
+                        <a href="https://youtube.com/@ennovatechnology1286?si=DltyPRZSHjJ3qHM1" target="_blank"> <i
+                                class="fab fa-youtube-square"></i></a>
+                        <a href="https://www.linkedin.com/company/ennova-technology/" target="_blank"> <i
+                                class="fab fa-linkedin"></i></a>
+                        <a href="https://www.instagram.com/ennova_technology?igsh=MTVieXY2Y29jcDgwaA==" target="_blank"> <i
+                                class="fab fa-instagram-square"></i></a>
+                    </div>
             </div>
         </div>
     </section>
