--- a/Nproduct.html
+++ b/Nproduct.html
@@ -70,7 +70,7 @@
     <section id="itimghideandview" class="container-fluid mt-5 upmallpage">
         <h2 class=" fw-bold proheadmargin ">Digital I/O Card</h2>
         <div class="d-flex justify-content-center secitsolutionimgdiv ">
-            <!-- <img id="myImg" class="img-fluid " src="./iocard/3 - Copy.png" alt=""> -->
+            <img id="myImg" class="img-fluid " src="./iocard/3 - Copy.png" alt="">
         </div>
 
         <div class="row ">
@@ -144,7 +144,7 @@
             <h3>Features:</h3>
             <ul>
                 <li>19 Analog & Digital input and output channels.</li>
-                <li>8 Analog Inputs supports-0-10V, 4-20mA, 0-20mA, 0-5V,0-24V PT100, J and K type input scale with
+                <li>8 Analog Inputs supports-0-10V, 4-20mA, 0-20mA, 0-5V, 0-24V PT100, J and K type input scale with
                     12-Bit
                     resolution.</li>
                 <li>2 Analog outputs supports - PWM, 0-10V.</li>
@@ -289,19 +289,20 @@
                     <p><i class="far fa-envelope"></i> purchase.ennovatech@gmail.com</p>
                     <p><i class="far fa-envelope"></i> development.ennovatech@gmail.com</p>
                 </div>
-                <p><i class="fa-solid fa-location-dot"></i> #Plot No.F45, Kupwad M.I.D.C road, Near TCI Freight.
+                <p><i class="fa-solid fa-location-dot"></i> #Plot No.F45, Kupwad M.I.D.C road, Near TCI Freight,
                     Kupwad, Dist-Sangli, Maharashtra- 416436.</p>
-                <div id="iconssym">
-                    <a href="https://www.facebook.com/profile.php?id=100063876886966"> <i
-                            class="fab fa-facebook-square"></i></a>
-                    <a href="https://twitter.com/EnnovaTech24"> <i class="fab fa-twitter-square"></i></a>
-                    <a href="https://youtube.com/@ennovatechnology1286?si=DltyPRZSHjJ3qHM1"> <i
-                            class="fab fa-youtube-square"></i></a>
-                    <a href="https://www.linkedin.com/company/ennova-technology/"> <i class="fab fa-linkedin"></i></a>
-                    <a href="https://www.instagram.com/ennova_technology?igsh=MTVieXY2Y29jcDgwaA=="> <i
-                            class="fab fa-instagram-square"></i></a>
-
-                </div>
+                    <div id="iconssym">
+                        <a href="https://www.facebook.com/profile.php?id=100063876886966" target="_blank"> <i
+                                class="fab fa-facebook-square"></i></a>
+                        <a href="https://twitter.com/EnnovaTech24" target="_blank"> <i class="fab fa-twitter-square"
+                                target="_blank"></i></a>
+                        <a href="https://youtube.com/@ennovatechnology1286?si=DltyPRZSHjJ3qHM1" target="_blank"> <i
+                                class="fab fa-youtube-square"></i></a>
+                        <a href="https://www.linkedin.com/company/ennova-technology/" target="_blank"> <i
+                                class="fab fa-linkedin"></i></a>
+                        <a href="https://www.instagram.com/ennova_technology?igsh=MTVieXY2Y29jcDgwaA==" target="_blank"> <i
+                                class="fab fa-instagram-square"></i></a>
+                    </div>
             </div>
         </div>
     </section>
