--- a/Contact.html
+++ b/Contact.html
@@ -86,7 +86,7 @@
                     </div>
                 </div>
                 <div class="form-group mt-3">
-                    <label for="email">Email address:</label>
+                    <label for="email">Email Address:</label>
                     <div class="relative">
                         <input class="form-control" type="email" required="" placeholder="Type your email address..."
                             pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$">
@@ -98,7 +98,7 @@
                     <div class="relative">
                         <input class="form-control" type="text" maxlength="10"
                             oninput="this.value=this.value.replace(/[^0-9]/g,'');" required=""
-                            placeholder="Type your Mobile Number...">
+                            placeholder="Type your mobile number...">
                         <i class="fa fa-phone"></i>
                     </div>
                 </div>
