--- a/thirdcv.html
+++ b/thirdcv.html
@@ -225,7 +225,7 @@
                     </tr>
                     <tr>
                         <td>4</td>
-                        <td>230VAC 1 C 8CH RELAY CARD</td>
+                        <td>230VAC 1 CO 8CH RELAY CARD</td>
                         <td>ET-RLC-230V-8CH-1CO</td>
                         <td>230V</td>
                         <td>8</td>
